fix z-index issue

--- a/webapp/src/components/modals/styles/preview-modal.scss
+++ b/webapp/src/components/modals/styles/preview-modal.scss
@@ -17,6 +17,7 @@
     border-bottom: 1px solid $deepBlue-90;
     left: 0; top: 0;
     position: absolute;
+    z-index: 1;
   }
 
   &__close {
